# gvdb

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  ROADMAP.md  config.example.yaml  mkdocs.yml  release-please-config.json  requirements-docs.txt  start.sh  stop.sh
.github/workflows/: ci.yml  docker-release.yml  docs.yml  helm-release.yml  pypi-release.yml  release-please.yml
cli/: .goreleaser.yaml  generate_proto.sh  go.mod  go.sum  main.go
cli/client/: client.go  errors.go
cli/cmd/: collection.go  collection_create.go  collection_drop.go  collection_list.go  health.go  import.go  root.go  search.go  stats.go  tui.go  vector.go  vector_delete.go  vector_get.go  vector_insert.go  vector_list.go  vector_update.go  version.go
cli/config/: config.go  config_test.go
cli/output/: format.go  format_test.go
cli/pb/: vectordb.pb.go
cli/tui/: app.go  keys.go  styles.go
clients/python/: README.md  generate_proto.sh  pyproject.toml
clients/python/examples/: quickstart.py
clients/python/gvdb/: __init__.py  client.py  importers.py
clients/python/gvdb/pb/: vectordb_pb2.py  vectordb_pb2_grpc.py
clients/python/tests/: conftest.py  test_import_integration.py  test_importers.py  test_rbac.py  test_sdk.py
connectors/: build.gradle.kts  gradle.properties  settings.gradle.kts
connectors/examples/: FlinkSinkExample.java  JavaClientExample.java  spark_write.py
connectors/gradle/: libs.versions.toml
connectors/gvdb-connector-tests/: build.gradle.kts
connectors/gvdb-flink-connector/: build.gradle.kts
connectors/gvdb-java-client/: build.gradle.kts
connectors/gvdb-spark-connector/: build.gradle.kts
deploy/: Dockerfile  kind-config.yaml
deploy/k8s/: configmap.yaml  coordinator.yaml  data-node.yaml  namespace.yaml  proxy.yaml  query-node.yaml  services.yaml
docs/: changelog.md  contributing.md  index.md
docs/architecture/: consensus.md  modules.md  overview.md  storage.md
docs/connectors/: flink.md  java-client.md  spark.md
docs/features/: gpu-acceleration.md  hybrid-search.md  metadata-filtering.md  persistence.md  rbac.md  sparse-vectors.md  tiered-storage.md  ttl.md  turboquant.md  vector-search.md
docs/getting-started/: distributed-cluster.md  installation.md  quickstart.md
docs/operations/: configuration.md  deploy-docker.md  deploy-helm.md  monitoring.md  security.md
docs/python-sdk/: bulk-import.md  client.md  examples.md  index.md
docs/reference/: cli.md  config.md
docs/use-cases/: bulk-ingestion.md  rag.md  semantic-search.md  streaming-ingestion.md
grafana/: README.md  docker-compose.yml  gvdb-dashboard.json  prometheus.yml
proto/: internal.proto  vectordb.proto
scripts/: test-distributed-flow.sh  test-metadata-sync-simple.sh  test-metadata-sync.sh  test-multinode.sh
src/auth/: CMakeLists.txt  auth_context.cpp  rbac.cpp
src/cluster/: CMakeLists.txt  coordinator.cpp  data_node.cpp  heartbeat_sender.cpp  internal_client.cpp  load_balancer.cpp  node_registry.cpp  query_node.cpp  replication.cpp  shard_manager.cpp
src/compute/: CMakeLists.txt  query_executor.cpp
src/consensus/: CMakeLists.txt  gvdb_log_store.cpp  gvdb_state_manager.cpp  metadata_state_machine.cpp  metadata_store.cpp  raft_node.cpp  timestamp_oracle.cpp
src/core/: CMakeLists.txt  filter.cpp  metadata.cpp  sparse_vector.cpp  status.cpp  vector.cpp
src/index/: CMakeLists.txt  bm25_index.cpp  faiss_base.cpp  faiss_base.h  faiss_flat.cpp  faiss_flat.h  faiss_hnsw.cpp  faiss_hnsw.h  faiss_ivf.cpp  faiss_ivf.h  index_factory.cpp  index_manager.cpp  sparse_index.cpp
src/index/metal/: metal_compute.h  metal_compute.mm  metal_flat_index.h  metal_flat_index.mm
src/index/metal/kernels/: distance.metal
src/index/turboquant/: ivf_turboquant_index.cpp  ivf_turboquant_index.h  turboquant_codec.cpp  turboquant_codec.h  turboquant_index.cpp  turboquant_index.h
src/main/: CMakeLists.txt  all_in_one_main.cpp  coordinator_main.cpp  data_node_main.cpp  proxy_main.cpp  query_node_main.cpp  single_node_main.cpp
src/network/: CMakeLists.txt  audit_context.cpp  audit_interceptor.cpp  auth_processor.cpp  collection_metadata_cache.cpp  collection_resolver.cpp  grpc_server.cpp  internal_service.cpp  proto_conversions.cpp  proxy_service.cpp  vectordb_service.cpp
src/storage/: CMakeLists.txt  bulk_importer.cpp  filesystem_object_store.cpp  local_storage.cpp  npy_reader.cpp  object_store.cpp  parquet_reader.cpp  s3_object_store.cpp  scalar_index.cpp  segment.cpp  segment_cache.cpp  segment_manager.cpp  segment_manifest.cpp  storage_factory.cpp  tiered_segment_manager.cpp
src/utils/: CMakeLists.txt  audit_logger.cpp  checksum.cpp  config.cpp  env_flags.cpp  logger.cpp  metrics.cpp  query_cache.cpp  server_bootstrap.cpp  thread_pool.cpp
test/: README.md
test/bench/: CMakeLists.txt  metal_bench.cpp
test/e2e/: e2e.go  (+26 more)
test/integration/: CMakeLists.txt  README.md  consensus_integration_test.cpp  distributed_data_node_test.cpp  docker-compose.minio.yml  e2e.go  go.mod  metadata_sync_integration_test.cpp  proxy_integration_test.cpp  run_all_tests.sh  s3_integration_test.cpp  segment_replication_integration_test.cpp  test_drop_flat.go
test/integration/pb/: vectordb.pb.go  vectordb_grpc.pb.go
test/unit/: CMakeLists.txt  audit_interceptor_test.cpp  auth_processor_test.cpp  bulk_import_test.cpp  checksum_test.cpp  cluster_simple_test.cpp  cluster_test.cpp  collection_metadata_cache_test.cpp  collection_resolver_test.cpp  compute_test.cpp  consensus_persistence_test.cpp  consensus_test.cpp  core_test.cpp  data_node_test.cpp  index_test.cpp  internal_client_test.cpp  internal_service_metadata_test.cpp  internal_service_rpc_test.cpp  metal_distance_test.cpp  network_test.cpp  node_registry_test.cpp  object_store_test.cpp  proxy_service_test.cpp  query_node_test.cpp  rbac_test.cpp  segment_cache_test.cpp  segment_manifest_test.cpp  sparse_index_test.cpp  storage_test.cpp  tiered_segment_manager_test.cpp  turboquant_test.cpp  utils_test.cpp  vectordb_service_coordinator_test.cpp  vectordb_service_distributed_test.cpp
ui/: Dockerfile
(+166 files in other folders)
